# ns-3-SAAGKA

./: .clangd  .gitignore  .gitmodules  build.sh
contrib/: .gitignore
scratch/: .gitignore
scratch/CI-SGC/: CMakeLists.txt  MIRACL-wrapper.h  application.cc  application.h  figure.py  metric.cc  metric.h  run.sh  sgc.cc  sgc.h  simulator.cc  utils.cc  utils.h  vehicle.cc  vehicle.h
scratch/CI-SGC/crypto/: MIRACL-wrapper.h  agka.cc  agka.h  debug.cc  pki.cc  pki.h  utils.cc  utils.h
scratch/CI-SGC/message/: bytereader.cc  bytereader.h  bytewriter.cc  bytewriter.h  header.h  message.cc  message.h
scratch/CI-SGC/script/: draw_join.py  draw_key_estab.py  run_key_estab.sh
scratch/CI-SGC/sgc/: sgc-rsu.cc  sgc-rsu.h  sgc-vehicle.cc  sgc-vehicle.h  sgc.cc  sgc.h
scratch/CI-SGC/tools/: aggregate.cc  trim.cc
